# ort-artifacts

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  build.sh  history.md
.cursor/commands/: speckit.specify.md
.github/: actionlint.yaml
.github/scripts/: create_apple_universal_static_artifact.py  create_apple_xcframework_artifact.py  generate_manifest.py  resolve_build_targets.py  slim_windows_artifact.py  validate_public_headers.py  (+8 more)
completion_log/: 2026-05-12--13-40-48--linux-static-workflows.md  2026-05-12--13-53-48--windows-static-workflows.md  2026-05-12--14-11-05--android-static-workflows.md  2026-05-12--17-15-29--required-operators-config-workflow.md  2026-05-12--17-26-29--checkbox-target-workflow-dispatch.md  2026-05-12--17-32-17--execution-provider-workflow-checkboxes.md  2026-05-12--18-07-23--project-polish-and-maintenance-cleanup.md  2026-05-12--19-04-01--apple-universal-static-artifacts.md  2026-05-12--19-19-35--apple-xcframework-artifact.md  2026-05-12--19-34-36--slim-windows-artifacts.md  2026-05-12--19-44-16--simplify-cd-workflow-dispatch-inputs.md  2026-05-12--20-45-03--single-visible-cd-workflow.md  2026-05-13--02-09-31--public-header-package-layout.md  2026-05-13--16-24-59--android-api24-static-artifacts.md
history/: 2026-05-12--android-static-workflows.md  2026-05-12--apple-universal-static-artifacts.md  2026-05-12--apple-xcframework-artifact.md  2026-05-12--checkbox-target-workflow-dispatch.md  2026-05-12--execution-provider-workflow-checkboxes.md  2026-05-12--linux-static-workflows.md  2026-05-12--project-polish-and-maintenance-cleanup.md  2026-05-12--required-operators-config-workflow.md  2026-05-12--simplify-cd-workflow-dispatch-inputs.md  2026-05-12--single-visible-cd-workflow.md  2026-05-12--slim-windows-artifacts.md  2026-05-12--windows-static-workflows.md  2026-05-13--android-api24-static-artifacts.md  2026-05-13--public-header-package-layout.md
scripts/: verify_onnxruntime_patches.cmake
specs/: 001-linux-static-workflows.md  002-windows-static-workflows.md  003-android-static-workflows.md  004-required-operators-config-workflow.md  005-checkbox-target-workflow-dispatch.md  006-execution-provider-workflow-checkboxes.md  007-slim-windows-artifacts.md  008-project-polish-and-maintenance-cleanup.md  009-apple-universal-static-artifacts.md  010-apple-xcframework-artifact.md  011-simplify-cd-workflow-dispatch-inputs.md  012-single-visible-cd-workflow.md  013-public-header-package-layout.md  014-android-api24-static-artifacts.md
src/static-build/: CMakeLists.txt  onnxruntimeConfig.cmake.in  onnxruntimeTargets.cmake.in
(+12 files in other folders)
